--- a/src/sample/receipt.fxml
+++ b/src/sample/receipt.fxml
@@ -8,70 +8,101 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="704.0" prefWidth="763.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Receipt">
+<AnchorPane prefHeight="777.0" prefWidth="763.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Receipt">
    <children>
       <Label layoutX="234.0" layoutY="26.0" text="ORDER ITEMS">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <TextField fx:id="IDField" layoutX="309.0" layoutY="127.0" prefHeight="31.0" prefWidth="245.0" />
-      <TextField fx:id="itemField" layoutX="270.0" layoutY="263.0" prefHeight="56.0" prefWidth="317.0" />
-      <Label layoutX="175.0" layoutY="120.0" prefHeight="45.0" prefWidth="134.0" text="Employee ID">
+      <TextField fx:id="IDField" layoutX="309.0" layoutY="197.0" prefHeight="31.0" prefWidth="245.0" />
+      <TextField fx:id="itemField" layoutX="270.0" layoutY="333.0" prefHeight="56.0" prefWidth="317.0" />
+      <Label layoutX="175.0" layoutY="190.0" prefHeight="45.0" prefWidth="134.0" text="Employee ID">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="167.0" layoutY="271.0" prefHeight="45.0" prefWidth="108.0" text="ITEM            ">
+      <Label layoutX="167.0" layoutY="341.0" prefHeight="45.0" prefWidth="108.0" text="ITEM            ">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="165.0" layoutY="326.0" prefHeight="45.0" prefWidth="108.0" text="QUANTITY ">
+      <Label layoutX="165.0" layoutY="396.0" prefHeight="45.0" prefWidth="108.0" text="QUANTITY ">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="qtyField" layoutX="272.0" layoutY="335.0" prefHeight="31.0" prefWidth="245.0" />
-      <Label layoutX="157.0" layoutY="380.0" prefHeight="45.0" prefWidth="117.0" text="  PRICE        ">
+      <TextField fx:id="qtyField" layoutX="272.0" layoutY="405.0" prefHeight="31.0" prefWidth="245.0" />
+      <Label layoutX="157.0" layoutY="450.0" prefHeight="45.0" prefWidth="117.0" text="  PRICE        ">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="priceField" layoutX="311.0" layoutY="387.0" prefHeight="31.0" prefWidth="245.0" />
-      <ChoiceBox layoutX="273.0" layoutY="443.0" prefHeight="31.0" prefWidth="176.0" />
-      <Label layoutX="167.0" layoutY="436.0" prefHeight="45.0" prefWidth="117.0" text="TYPE   ">
+      <TextField fx:id="priceField" layoutX="311.0" layoutY="457.0" prefHeight="31.0" prefWidth="245.0" />
+      <ChoiceBox fx:id="typeChoices" layoutX="273.0" layoutY="513.0" prefHeight="31.0" prefWidth="176.0" />
+      <Label layoutX="167.0" layoutY="506.0" prefHeight="45.0" prefWidth="117.0" text="TYPE   ">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="537.0" layoutY="489.0" mnemonicParsing="false" onAction="#addItem" prefHeight="31.0" prefWidth="100.0" text="ADD" />
-      <Label layoutX="438.0" layoutY="534.0" prefHeight="45.0" prefWidth="154.0" text="TOTAL PRICE   -">
+      <Button layoutX="537.0" layoutY="547.0" mnemonicParsing="false" onAction="#addItem" prefHeight="31.0" prefWidth="100.0" text="ADD" />
+      <Label layoutX="438.0" layoutY="594.0" prefHeight="45.0" prefWidth="154.0" text="TOTAL PRICE   -">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Separator layoutX="68.0" layoutY="506.0" prefHeight="56.0" prefWidth="653.0" />
-      <Label fx:id="totalLabel" layoutX="576.0" layoutY="534.0" prefHeight="45.0" prefWidth="77.0" text="0">
+      <Separator layoutX="68.0" layoutY="567.0" prefHeight="56.0" prefWidth="653.0" />
+      <Label fx:id="totalLabel" layoutX="576.0" layoutY="594.0" prefHeight="45.0" prefWidth="77.0" text="0">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="276.0" layoutY="381.0" opacity="0.49" prefHeight="45.0" prefWidth="84.0" text="RP.">
+      <Label layoutX="276.0" layoutY="451.0" opacity="0.49" prefHeight="45.0" prefWidth="84.0" text="RP.">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="309.0" layoutY="614.0" mnemonicParsing="false" onAction="#finish" prefHeight="45.0" prefWidth="154.0" text="FINISH RECEIPT" />
-      <Label layoutX="175.0" layoutY="164.0" prefHeight="45.0" prefWidth="134.0" text="Date &amp; Time">
+      <Button layoutX="309.0" layoutY="714.0" mnemonicParsing="false" onAction="#finish" prefHeight="45.0" prefWidth="154.0" text="FINISH RECEIPT" />
+      <Label layoutX="175.0" layoutY="234.0" prefHeight="45.0" prefWidth="134.0" text="Date &amp; Time">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="dateField" layoutX="310.0" layoutY="169.0" prefHeight="31.0" prefWidth="245.0" />
-      <Label layoutX="562.0" layoutY="165.0" opacity="0.49" prefHeight="45.0" prefWidth="186.0" text="e.g. YY-MM-DD HH:MM:SS">
+      <Label fx:id="currentTime" layoutX="311.0" layoutY="235.0" opacity="0.49" prefHeight="45.0" prefWidth="228.0" text="Date will show after an item is added">
          <font>
             <Font size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="175.0" layoutY="110.0" prefHeight="45.0" prefWidth="134.0" text="City - ">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="175.0" layoutY="139.0" prefHeight="45.0" prefWidth="134.0" text="BranchID - ">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="cityName" layoutX="234.0" layoutY="116.0" prefHeight="31.0" prefWidth="117.0" text="Label">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Label>
+      <Label fx:id="cityID" layoutX="264.0" layoutY="145.0" prefHeight="31.0" prefWidth="117.0" text="Label">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Label>
+      <Button layoutX="34.0" layoutY="26.0" mnemonicParsing="false" onAction="#buttonback" prefHeight="31.0" prefWidth="100.0" text="BACK" />
+      <Label layoutX="157.0" layoutY="650.0" prefHeight="45.0" prefWidth="117.0" text="CASH">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="cashField" layoutX="311.0" layoutY="657.0" prefHeight="31.0" prefWidth="245.0" />
+      <Label layoutX="276.0" layoutY="651.0" opacity="0.49" prefHeight="45.0" prefWidth="84.0" text="RP.">
+         <font>
+            <Font size="18.0" />
          </font>
       </Label>
    </children>
