--- a/src/sample/result.fxml
+++ b/src/sample/result.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
@@ -145,6 +146,9 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <ListView fx:id="orders" layoutX="52.0" layoutY="313.0" prefHeight="200.0" prefWidth="452.0" />
+      <ListView fx:id="orders" layoutX="12.0" layoutY="313.0" prefHeight="200.0" prefWidth="67.0" />
+      <Button layoutX="27.0" layoutY="23.0" mnemonicParsing="false" onAction="#buttonback" prefHeight="31.0" prefWidth="67.0" text="BACK" />
+      <ListView fx:id="orders1" layoutX="73.0" layoutY="313.0" prefHeight="200.0" prefWidth="325.0" />
+      <ListView fx:id="orders2" layoutX="396.0" layoutY="313.0" prefHeight="200.0" prefWidth="135.0" />
    </children>
 </AnchorPane>
