--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="246.0" prefWidth="458.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <TextField fx:id="cityField" layoutX="114.0" layoutY="84.0" prefHeight="49.0" prefWidth="307.0" />
       <Label fx:id="cityLabel" layoutX="53.0" layoutY="88.0" prefHeight="21.0" prefWidth="51.0" text="City">
          <font>
             <Font size="27.0" />
@@ -19,5 +18,6 @@
             <Font size="29.0" />
          </font>
       </Label>
+      <ChoiceBox fx:id="cityChoice" layoutX="118.0" layoutY="93.0" prefHeight="31.0" prefWidth="236.0" />
    </children>
 </AnchorPane>
