--- a/src/sample/result.fxml
+++ b/src/sample/result.fxml
@@ -150,5 +150,6 @@
       <Button layoutX="27.0" layoutY="23.0" mnemonicParsing="false" onAction="#buttonback" prefHeight="31.0" prefWidth="67.0" text="BACK" />
       <ListView fx:id="orders1" layoutX="73.0" layoutY="313.0" prefHeight="200.0" prefWidth="325.0" />
       <ListView fx:id="orders2" layoutX="396.0" layoutY="313.0" prefHeight="200.0" prefWidth="135.0" />
+      <Button layoutX="439.0" layoutY="23.0" mnemonicParsing="false" onAction="#report" prefHeight="31.0" prefWidth="83.0" text="REPORT" />
    </children>
 </AnchorPane>
