--- a/src/sample/receipt.fxml
+++ b/src/sample/receipt.fxml
@@ -105,5 +105,6 @@
             <Font size="18.0" />
          </font>
       </Label>
+      <Button layoutX="630.0" layoutY="26.0" mnemonicParsing="false" onAction="#report" prefHeight="31.0" prefWidth="100.0" text="REPORT" />
    </children>
 </AnchorPane>
